// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fragments "CTA_FRAGMENT" matches snapshot: CTA_FRAGMENT 1`] = `
"
  cta {
    id
    label
    linkType
    externalLink
    internalLink {
      id
      slug
    }
  }
"
`;

exports[`Fragments "HERO_FRAGMENT" matches snapshot: HERO_FRAGMENT 1`] = `
"
... on HeroBlock {
    __typename
    id
    hero {
      id
      
  icon {
    id
    alt
    url
    width
    height
  }

      heading
      headingTag
      coloredSubhead
      subhead
      doodles
      homepage
      
  cta {
    id
    label
    linkType
    externalLink
    internalLink {
      id
      slug
    }
  }

    }
  }
"
`;

exports[`Fragments "ICON_FRAGMENT" matches snapshot: ICON_FRAGMENT 1`] = `
"
  icon {
    id
    alt
    url
    width
    height
  }
"
`;

exports[`Fragments "IMAGE_FRAGMENT" matches snapshot: IMAGE_FRAGMENT 1`] = `
"
    id
    alt
    url
    width
    height
"
`;

exports[`Fragments "INTERNAL_LINK_FRAGMENT" matches snapshot: INTERNAL_LINK_FRAGMENT 1`] = `
"
    id
    title
    slug
"
`;

exports[`Fragments "SINGLE_USE_FRAGMENT" matches snapshot: SINGLE_USE_FRAGMENT 1`] = `
"
... on SingleUseBlock {
  __typename
  id
  singleUse
  
}
"
`;
